--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.3.5"
   },
