--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@heroui/react": "^2.7.8",
+    "@heroui/select": "^2.4.19",
     "@nextui-org/react": "^2.6.11",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.2",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^3.3.5"
