--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.2",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
