--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.7.8",
     "@heroui/select": "^2.4.19",
     "@nextui-org/react": "^2.6.11",
@@ -18,6 +19,7 @@
     "framer-motion": "^12.9.2",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
