--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@heroui/divider": "^2.2.13",
     "@heroui/react": "^2.7.8",
     "@heroui/select": "^2.4.19",
+    "@hugeicons/core-free-icons": "^1.0.14",
+    "@hugeicons/react": "github:hugeicons/react",
     "@nextui-org/react": "^2.6.11",
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.2",
+    "hugeicons-react": "^0.3.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
