--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@heroui/chip": "^2.2.15",
     "@heroui/divider": "^2.2.13",
     "@heroui/react": "^2.7.8",
     "@heroui/select": "^2.4.19",
@@ -27,6 +28,7 @@
     "nodemailer": "^6.10.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-date-object": "^2.1.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "swiper": "^11.2.6",
