--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
     "@heroui/divider": "^2.2.13",
     "@heroui/react": "^2.7.8",
@@ -21,6 +23,8 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.2",
     "hugeicons-react": "^0.3.0",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.510.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
@@ -29,6 +33,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "tailwind-variants": "^1.0.0",
